<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_launcher"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.81"
            android:gravity="fill"
            android:padding="20dp"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/detail_largeText"
                android:id="@+id/textView"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/detail_mediumText"
                android:id="@+id/textView3" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="127dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/detail_smallText"
                android:id="@+id/textView2"/>
    </LinearLayout>
</LinearLayout>