<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:id="@+id/oneTweet" android:weightSum="1">

    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/tweetImage"
            android:layout_margin="5dp"
            android:src="@drawable/ic_launcher"
            />
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:id="@+id/tweetDetails"
            android:gravity="start"
            android:layout_margin="10dp"
            android:layout_weight="6.75">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/list_largeText"
                android:id="@+id/tweet_header"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic"
                android:textColor="@android:color/darker_gray"
                android:text="@string/list_mediumText"
                android:id="@+id/tweet_body"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="normal"
                android:text="@string/list_smallText"
                android:id="@+id/tweet_footer"/>
    </LinearLayout>
</LinearLayout>